2008-06-26  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_debig.c (__p_type_syms): Add ns_t_dname entry.
	Patch by Peter Jones <pjones@redhat.com>.

2008-06-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6654]
	* stdlib/canonicalize.c (__realpath): readlink can write too much
	into the buffer on platforms without PATH_MAX.

2008-06-17  Carlos O'Donell  <carlos@codesourcery.com>

	[BZ #6653]
	* posix/tst-regex.c (main): Rename to...
	(do_test): ... this. Remove cmdline option processing.
	(TIMEOUT): Define.
	(TEST_FUNCTION): Define.
	(CMDLINE_OPTIONS): Define.

2008-06-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5210]
	* configure.in: Add -Werror to -fstack-protector test to catch
	unsupported architectures.
	Patch by Gilles Esponasse <g.esp@free.fr>.

2008-06-17  Joseph Myers  <joseph@codesourcery.com>

	* stdlib/tst-setcontext.c: Set back_in_main before exit if
	getcontext returns ENOSYS.

2008-06-18  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (main_loop_poll): Fix test for read error.
	(main_loop_epoll): Likewise.

2008-06-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c: Move _res_hconf_init call to a
	better place so it is not called when nscd is used.

	* nscd/connections.c: Also recognize and handle changes to the
	resolver configuration file.

2008-06-12  Ulrich Drepper  <drepper@redhat.com>

	* time/strftime.c: Pass reference to tzset_called around to handle
	recursive calls.

	[BZ #6612]
	* time/strftime.c (__strftime_internal): Call tzset() only
	when printing timezone-dependent values.
	Based on a patch by Petr Baudis <pasky@suse.cz>.

	* resolv/nss_dns/dns-host.c (gaih_getanswer): Don't
	unconditionally use second gaih_getanswer_slice result.

	* sysdeps/posix/getaddrinfo.c (gai_inet): Remove unnecessary test.
	(getaddrinfo): RES must always be non-NULL.

2008-06-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc64/fpu/s_llround.S (__llround): Avoid using
	cr[34] registers.