@@ -1,3 +1,7 @@
+2008-06-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* tst-strptime.c (do_test): Add test of %EY.
+
 2008-06-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* tst-strptime.c (do_test): Add test for parsing era year
